--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,8 +1,48 @@
 <nav class="navbar navbar-dark bg-primary mt-2">
     <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1">Title</span>
-        <form class="d-flex">
+        <span class="navbar-brand mb-0 h1">{{title}}</span>
+        <form class ="d-flex">
             <input class="form-control me2" type="text" placeholder="Filter">
         </form>
+
     </div>
 </nav>
+
+<div class="card mt-3">
+    <div class="card-body">
+        Filtering by:
+    </div>
+</div>
+
+@if (products != null && products.length > 0) {
+<div class="mt-3">
+    <button class="btn btn-primary">Show images</button>
+</div>
+
+<div class="table-responsive mt-3">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Item Image</th>
+                <th>Code</th>
+                <th>Name</th>
+                <th>Unit Price</th>
+                <th>Release Date</th>
+                <th>Star Rating</th>
+            </tr>
+        </thead>
+        <tbody>
+            @for (product of products; track product.productCode) {
+                <tr>
+                    <td></td>
+                    <td>{{product.productCode}}</td>
+                    <td>{{product.productName}}</td>
+                    <td>{{product.price}}</td>
+                    <td>{{product.releaseDate}}</td>
+                    <td>{{product.starRating}}</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+}
