Introduction to piping in angular

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <span class="navbar-brand mb-0 h1">{{title}}</span>
         <form class ="d-flex">
-            <input class="form-control me2" type="text" placeholder="Filter">
+            <input name="textListFilter" class="form-control me2" type="text" placeholder="Filter" [(ngModel)]="listFilter">
         </form>
 
     </div>
@@ -10,20 +10,22 @@
 
 <div class="card mt-3">
     <div class="card-body">
-        Filtering by:
+        Filtering by: {{listFilter}}
     </div>
 </div>
 
 @if (products != null && products.length > 0) {
 <div class="mt-3">
-    <button class="btn btn-primary" (click)="toggleImages()">Show images</button>
+    <button class="btn btn-primary" (click)="toggleImages()">{{areImagesVisible ? 'Hide' : 'Show'}} images</button>
 </div>
 
 <div class="table-responsive mt-3">
     <table class="table">
         <thead>
             <tr>
-                <th>Item Image</th>
+                @if (areImagesVisible) {
+                    <th>Item Image</th>
+                }
                 <th>Code</th>
                 <th>Name</th>
                 <th>Unit Price</th>
@@ -34,20 +36,20 @@
         <tbody>
             @for (product of products; track product.productCode) {
                 <tr>
-                    <td>
-                        @if (areImagesVisible) {
-                            <img 
-                            [src]="product.imageUrl" 
-                            [style.width.px]="imageWidth"
-                            [style.margin.px]="imageMargin"
-                            [title]="product.productName"
-                            [alt]="product.description"
-                        >
-                        }
-                    </td>
-                    <td>{{product.productCode}}</td>
-                    <td>{{product.productName}}</td>
-                    <td>{{product.price}}</td>
+                    @if (areImagesVisible) {
+                        <td>
+                                <img 
+                                [src]="product.imageUrl" 
+                                [style.width.px]="imageWidth"
+                                [style.margin.px]="imageMargin"
+                                [title]="product.productName | uppercase"
+                                [alt]="product.description"
+                            >
+                        </td>
+                    }
+                    <td>{{product.productCode | lowercase}}</td>
+                    <td>{{product.productName | uppercase}}</td>
+                    <td>{{product.price | currency:'EUR':'symbol':'1.2-2'}}</td>
                     <td>{{product.releaseDate}}</td>
                     <td>{{product.starRating}}</td>
                 </tr>
