--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -51,7 +51,7 @@
                     <td>{{product.name | lowercase}}</td>
                     <td>{{product.price | currency:'EUR':'symbol':'1.2-2'}}</td>
                     <td>{{product.releaseDate | date}}</td>
-                    <td><app-star-rating [productRating]="product.starRating"></app-star-rating></td>
+                    <td><app-star-rating [productRating]="product.starRating" (notify)="onNotify($event)"></app-star-rating></td>
                 </tr>
             }
         </tbody>
