--- a/src/app/star-rating/star-rating.component.html
+++ b/src/app/star-rating/star-rating.component.html
@@ -1,4 +1,4 @@
-<div [style.width.px]="starWidth" class="crop">
+<div [style.width.px]="starWidth" class="crop" (click)="onClick()">
     <div style="width: 120px">
         <span class="material-icons">star</span>
         <span class="material-icons">star</span>
