preparing for routing

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,12 +1,10 @@
-<nav class="navbar navbar-dark bg-primary mt-2">
-    <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1">{{title}}</span>
+<div class="card mt-3">
+    <div class="card-body">
         <form class ="d-flex">
             <input name="textListFilter" class="form-control me2" type="text" placeholder="Filter" [(ngModel)]="listFilter">
         </form>
-
     </div>
-</nav>
+</div>
 
 <div class="card mt-3">
     <div class="card-body">
