--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,12 @@
-<nav class="navbar navbar-dark bg-primary mt-2">
-    <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1">{{title}}</span>
-    </div>
+<nav class="navbar navbar-expand-sm navbar-dark bg-primary mt-2">
+    <span class="navbar-brand ms-3">{{title}}</span>
+
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/products" routerLinkActive="active">Product List</a>
+        </li>
+    </ul>
 </nav>
