--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -46,7 +46,7 @@
                         </td>
                     }
                     <td>{{product.code | uppercase | convertToSpace:'-'}}</td>
-                    <td>{{product.name | lowercase}}</td>
+                    <td><a [routerLink]="['/products', product.id]">{{product.name | lowercase}}</a></td>
                     <td>{{product.price | currency:'EUR':'symbol':'1.2-2'}}</td>
                     <td>{{product.releaseDate | date}}</td>
                     <td><app-star-rating [productRating]="product.starRating" (notify)="onNotify($event)"></app-star-rating></td>
