--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -9,7 +9,7 @@
                 <div class="col-md-2">Code</div>
                 <div class="col-md-10">{{product.code| uppercase | convertToSpace:'-'}}</div>
             </div>
-            
+
             <div class="row">
                 <div class="col-md-2">Name</div>
                 <div class="col-md-10">{{product.name | lowercase}}</div>
@@ -32,5 +32,11 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="mt-2">
+        <button class="btn btn-primary" (click)="onBackButtonClick()">
+            Back to Product List
+        </button>
     </div>
 }
