--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,5 +8,8 @@
         <li class="nav-item">
             <a class="nav-link" routerLink="/products" routerLinkActive="active">Product List</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/add" routerLinkActive="active">Add Product</a>
+        </li>
     </ul>
 </nav>
