--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -9,41 +9,83 @@
                 <div class="form-group">
                     <label for="txtCode">Code</label>
                     <input type="text" class="form-control" id="txtCode" formControlName="code" placeholder="Enter Code">
+
+                    <div class="text-danger">
+                        @if (productForm.get("code")?.hasError('required')) {
+                            <div>Code is required</div>
+                        }
+                    </div>
                 </div>
 
                 <div class="form-group mt-2">
                     <label for="txtName">Name</label>
                     <input type="text" class="form-control" id="txtName" formControlName="name" placeholder="Enter Name">
+
+                    <div class="text-danger">
+                        @if (productForm.get("name")?.hasError('required')) {
+                            <div>Name is required</div>
+                        }
+                    </div>
                 </div>
 
                 <div class="form-group mt-2">
                     <label for="txtDesc">Description</label>
                     <input type="text" class="form-control" id="txtDesc" formControlName="description" placeholder="Enter Description">
+
+                    <div class="text-danger">
+                        @if (productForm.get("description")?.hasError('required')) {
+                            <div>Description is required</div>
+                        }
+                    </div>
                 </div>
 
                 <div class="form-group mt-2">
                     <label for="txtrelDate">Release Date</label>
                     <input type="date" class="form-control" id="txtrelDate" formControlName="releaseDate" placeholder="Enter Release Date">
+
+                    <div class="text-danger">
+                        @if (productForm.get("releaseDate")?.hasError('required')) {
+                            <div>Release Date is required</div>
+                        }
+                    </div>
                 </div>
 
                 <div class="form-group mt-2">
                     <label for="txtPrice">Price</label>
                     <input type="number" class="form-control" id="txtPrice" formControlName="price" placeholder="Enter Price">
+
+                    <div class="text-danger">
+                        @if (productForm.get("price")?.hasError('required')) {
+                            <div>Price is required</div>
+                        }
+                    </div>
                 </div>
 
                 <div class="form-group mt-2">
                     <label for="txtStarRating">Star Rating</label>
                     <input type="number" class="form-control" id="txtStarRating" formControlName="starRating" placeholder="Enter Star Rating">
+
+                    <div class="text-danger">
+                        @if (productForm.get("starRating")?.hasError('required')) {
+                            <div>Star Rating is required</div>
+                        }
+                    </div>
                 </div>
 
                 <div class="form-group mt-2">
                     <label for="txtImg">ImageUrl</label>
                     <input type="url" class="form-control" id="txtImg" formControlName="imageUrl" placeholder="Enter URL">
+
+                    <div class="text-danger">
+                        @if (productForm.get("imageUrl")?.hasError('required')) {
+                            <div>Image URL is required</div>
+                        }
+                    </div>
                 </div>
             </fieldset>
 
             <div class="mt-3">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" [disabled]="!productForm.valid" class="btn btn-primary">Submit</button>
             </div>
         </form>
     </div>
